--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -4,165 +4,232 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Raleway:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/resetCss.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Крафтовая кофейня Gourmet Coffee</title>
   </head>
   <body>
     <div class="mainwrapper">
-      <!-- Тут будет ключевой образ, бариста который льет горячий кофе мимо кружки и обливает руку клиенту -->
       <header>
         <div class="headerwrapper">
-          <div class="logo"></div>
-          <div class="navbar"></div>
-          <div class="socialblock"></div>
+          <div class="logo">
+            <img src="/img/логотип.svg" alt="Gourmet Coffee" />
+          </div>
+          <div class="navbar">
+            <a href="#">Меню</a>
+            <a href="#">О нас</a>
+            <a href="#">Команда</a>
+            <a href="#">Доставка</a>
+          </div>
+          <div class="flexspace"></div>
+          <div class="socialblock">
+            <img src="/img/instagram.svg" alt="Instagramm" />
+            <img src="/img/vk.svg" alt="Vk" />
+            <img src="/img/twitter.svg" alt="Twitter" />
+          </div>
         </div>
       </header>
-      <div class="heroheader"></div>
-      <div class="menu">
-        <div class="category"></div>
-        <div class="product">
-          <div class="arowbig"></div>
+      <div class="forbackgroundimage">
+        <!-- Тут будет ключевой образ, бариста который льет горячий кофе мимо кружки и обливает руку клиенту -->
+        <div class="heroheader">
+          <div class="herocontent">
+            <h1>Крафтовая кофейня<br />«gourmet coffee»</h1>
+            <p>
+              Изысканным кофе по традиционным рецептам и его необычным<br />способом
+              подачи наши гости наслаждаются уже 5 лет.
+            </p>
+            <div class="buttoncontainer">
+              <a href="#"><p class="buttonfindme">Найти нас</p></a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="info">
-        <h1>Познакомимся поближе</h1>
-        <div class="infocontent">
-          <img src="#" alt="кофе" />
-          <h2>Каким должен быть вкусный кофе?</h2>
-          <p>
-            Крафтовым кофе называют сорта, которые создают по специальным
-            рецептам в незначительных количествах. Это зерна с особенным вкусом,
-            рецепт обжарки которых мастера не раскрывают. Крафтовый кофе часто
-            выполняют по индивидуальному заказу клиента. Зерна особой обжарки
-            невозможно найти в магазинах, они продаются только в
-            специализированных мастерских, занимающихся созданием великолепных
-            крафтовых сортов. Их производят вручную, поэтому партии товара
-            всегда маленькие, а обжарка максимально свежая. Уникальная
-            рецептура, лучшие сорта кофе, ручная работа и ограниченное
-            количество формируют стоимость. Она всегда выше, чем цена обычных
-            предложений, которых полно в супермаркетах. Но вкус крафтового зерна
-            способен удивить, он надолго оставит на губах невероятное
-            послевкусие.
-          </p>
+        <div class="menu">
+          <h1>Меню</h1>
+          <div class="category">
+            <a href="#">Кофе</a>
+            <a href="#">Чай</a>
+            <a href="#">Лимонады</a>
+            <a href="#">Десерты</a>
+            <a href="#">Кофе в зернах</a>
+          </div>
+          <div class="product">
+            <div class="proditems">
+              <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
+              <p class="prodname">Кофейный гоголь-моголь</p>
+              <p class="prodcost">190 руб</p>
+            </div>
+            <div class="proditems">
+              <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
+              <p class="prodname">Эспрессо-тоник</p>
+              <p class="prodcost">190 руб</p>
+            </div>
+            <div class="proditems">
+              <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
+              <p class="prodname">Тим Там Слэм</p>
+              <p class="prodcost">190 руб</p>
+            </div>
+            <div class="proditems">
+              <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
+              <p class="prodname">Аффогато</p>
+              <p class="prodcost">190 руб</p>
+            </div>
+          </div>
+          <div class="arowbig">
+            <a class="leftarrow" href="#"></a>
+              <!-- <img src="/img/whitearrow.svg" alt="Стрелка в лево" -->
+            </a>
+            <a class="rightarrow" href="#">
+              <!-- <img src="/img/blackarrow.svg" alt="стрелка в право" /> -->
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="whatWe">
-        <h1>Почему выбирают нас?</h1>
-        <div class="recipeBlock">
-          <div class="recipe">
-            <img src="#" alt="Картинка с кофем" />
-            <h2>Мы предлагаем необычные рецепты</h2>
+        <div class="info">
+          <h1>Познакомимся поближе</h1>
+          <div class="infocontent">
+            <h2>Каким должен быть вкусный кофе?</h2>
             <p>
-              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
-              это превосходная основа для оригинальных кофейных коктейлей,
-              которые вы можете попробовать в нашем заведении.
-            </p>
-          </div>
-          <div class="recipe">
-            <img src="#" alt="Картинка с кофем" />
-            <h2>Мы предлагаем необычные рецепты</h2>
-            <p>
-              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
-              это превосходная основа для оригинальных кофейных коктейлей,
-              которые вы можете попробовать в нашем заведении.
-            </p>
-          </div>
-          <div class="recipe">
-            <img src="#" alt="Картинка с кофем" />
-            <h2>Мы предлагаем необычные рецепты</h2>
-            <p>
-              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
-              это превосходная основа для оригинальных кофейных коктейлей,
-              которые вы можете попробовать в нашем заведении.
-            </p>
-          </div>
-          <div class="recipe">
-            <img src="#" alt="Картинка с кофем" />
-            <h2>Мы предлагаем необычные рецепты</h2>
-            <p>
-              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
-              это превосходная основа для оригинальных кофейных коктейлей,
-              которые вы можете попробовать в нашем заведении.
-            </p>
-          </div>
-          <div class="recipe">
-            <img src="#" alt="Картинка с кофем" />
-            <h2>Мы предлагаем необычные рецепты</h2>
-            <p>
-              Эспрессо и американо — неизменная классика кофе. Но, кроме того,
-              это превосходная основа для оригинальных кофейных коктейлей,
-              которые вы можете попробовать в нашем заведении.
+              Крафтовым кофе называют сорта, которые создают по специальным
+              рецептам в незначительных количествах. Это зерна с особенным
+              вкусом, рецепт обжарки которых мастера не раскрывают. <br> <br>Крафтовый
+              кофе часто выполняют по индивидуальному заказу клиента. Зерна
+              особой обжарки невозможно найти в магазинах, они продаются только
+              в специализированных мастерских, занимающихся созданием
+              великолепных крафтовых сортов. Их производят вручную, поэтому
+              партии товара всегда маленькие, а обжарка максимально свежая. <br><br>
+              Уникальная рецептура, лучшие сорта кофе, ручная работа и
+              ограниченное количество формируют стоимость. Она всегда выше, чем
+              цена обычных предложений, которых полно в супермаркетах. Но вкус
+              крафтового зерна способен удивить, он надолго оставит на губах
+              невероятное послевкусие.
             </p>
           </div>
         </div>
-      </div>
-      <div class="workprofessional">
-        <h1>У нас работают только профессионалы</h1>
-        <div class="workpeopleblock">
-          <div class="rollerblock">
-            <img src="#" alt="стрелка в лево" />
-            <div class="workerportfolio">
-              <img src="#" alt="Фото работника" />
-              <p>Иванов Иван</p>
+        <div class="whatWe">
+          <h1>Почему выбирают нас?</h1>
+          <div class="recipeBlock">
+            <div class="recipe">
+              <img src="#" alt="Картинка с кофем" />
+              <h2>Мы предлагаем необычные рецепты</h2>
               <p>
-                Бариста – работник кафе, который варит кофе и готовит на его
-                основе различные напитки и десерты. Эта профессия похожа на
-                профессию бармена, но стихия бариста – не алкоголь, а ароматный,
-                бодрящий кофе.
+                Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+                это превосходная основа для оригинальных кофейных коктейлей,
+                которые вы можете попробовать в нашем заведении.
               </p>
             </div>
-            <img src="#" alt="стрелка в право" />
+            <div class="recipe">
+              <img src="#" alt="Картинка с кофем" />
+              <h2>Мы предлагаем необычные рецепты</h2>
+              <p>
+                Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+                это превосходная основа для оригинальных кофейных коктейлей,
+                которые вы можете попробовать в нашем заведении.
+              </p>
+            </div>
+            <div class="recipe">
+              <img src="#" alt="Картинка с кофем" />
+              <h2>Мы предлагаем необычные рецепты</h2>
+              <p>
+                Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+                это превосходная основа для оригинальных кофейных коктейлей,
+                которые вы можете попробовать в нашем заведении.
+              </p>
+            </div>
+            <div class="recipe">
+              <img src="#" alt="Картинка с кофем" />
+              <h2>Мы предлагаем необычные рецепты</h2>
+              <p>
+                Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+                это превосходная основа для оригинальных кофейных коктейлей,
+                которые вы можете попробовать в нашем заведении.
+              </p>
+            </div>
+            <div class="recipe">
+              <img src="#" alt="Картинка с кофем" />
+              <h2>Мы предлагаем необычные рецепты</h2>
+              <p>
+                Эспрессо и американо — неизменная классика кофе. Но, кроме того,
+                это превосходная основа для оригинальных кофейных коктейлей,
+                которые вы можете попробовать в нашем заведении.
+              </p>
+            </div>
           </div>
-          <div class="zerno">
-            <img src="#" alt="" />
-            <img src="#" alt="" />
-            <img src="#" alt="" />
-            <img src="#" alt="" />
-            <img src="#" alt="" />
-            <img src="#" alt="" />
+        </div>
+        <div class="workprofessional">
+          <h1>У нас работают только профессионалы</h1>
+          <div class="workpeopleblock">
+            <div class="rollerblock">
+              <img src="#" alt="стрелка в лево" />
+              <div class="workerportfolio">
+                <img src="#" alt="Фото работника" />
+                <p>Иванов Иван</p>
+                <p>
+                  Бариста – работник кафе, который варит кофе и готовит на его
+                  основе различные напитки и десерты. Эта профессия похожа на
+                  профессию бармена, но стихия бариста – не алкоголь, а
+                  ароматный, бодрящий кофе.
+                </p>
+              </div>
+              <img src="#" alt="стрелка в право" />
+            </div>
+            <div class="zerno">
+              <img src="#" alt="" />
+              <img src="#" alt="" />
+              <img src="#" alt="" />
+              <img src="#" alt="" />
+              <img src="#" alt="" />
+              <img src="#" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="rewardsblock">
+          <h1>Нам есть чем гордиться</h1>
+          <div class="rewards">
+            <div class="reward">
+              <img src="#" alt="Картинка кофе" />
+              <p>Премия «Бариста года 2019»</p>
+              <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+            </div>
+            <div class="reward">
+              <img src="#" alt="Картинка кофе" />
+              <p>Премия «Бариста года 2019»</p>
+              <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+            </div>
+            <div class="reward">
+              <img src="#" alt="Картинка кофе" />
+              <p>Премия «Бариста года 2019»</p>
+              <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+            </div>
+          </div>
+        </div>
+        <div class="delivery">
+          <!-- на фоне картинка зерен в турке-->
+          <h1>Действует доставка!</h1>
+          <p>
+            Доставляем кофе в зёрнах и десерты за 30 минут по Адмиралтейскому
+            району. Минимальная сумма заказа — 500 рублей.
+          </p>
+          <!-- тут будет кнопка -->
+          <button>Заказать</button>
+        </div>
+        <div class="maps">
+          <div class="addres">
+            <h1>Мы ждем вас!</h1>
+            <p>9:00 — 21:00</p>
+            <p>ул. Малая Морская, 9</p>
+            <p>ул. Конногвардейский бульвар, 13</p>
+          </div>
+          <div class="map">
+            <!-- тут будет карта, вставлю из яндекса -->
           </div>
         </div>
       </div>
-      <div class="rewardsblock">
-        <h1>Нам есть чем гордиться</h1>
-        <div class="rewards">
-          <div class="reward">
-            <img src="#" alt="Картинка кофе" />
-            <p>Премия «Бариста года 2019»</p>
-            <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
-          </div>
-          <div class="reward">
-            <img src="#" alt="Картинка кофе" />
-            <p>Премия «Бариста года 2019»</p>
-            <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
-          </div>
-          <div class="reward">
-            <img src="#" alt="Картинка кофе" />
-            <p>Премия «Бариста года 2019»</p>
-            <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
-          </div>
-        </div>
-      </div>
-      <div class="delivery">
-        <!-- на фоне картинка зерен в турке-->
-        <h1>Действует доставка!</h1>
-        <p>
-          Доставляем кофе в зёрнах и десерты за 30 минут по Адмиралтейскому
-          району. Минимальная сумма заказа — 500 рублей.
-        </p>
-        <!-- тут будет кнопка -->
-        <button>Заказать</button>
-      </div>
-      <div class="maps">
-        <div class="addres">
-          <h1>Мы ждем вас!</h1>
-          <p>9:00 — 21:00</p>
-          <p>ул. Малая Морская, 9</p>
-          <p>ул. Конногвардейский бульвар, 13</p>
-        </div>
-        <div class="map">
-          <!-- тут будет карта, вставлю из яндекса -->
-        </div>
-      </div>
+
       <footer>
         <div class="footerwrapper">
           <div class="logo"></div>
