gk.test почему выбирают нас

--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -114,7 +114,7 @@
           <h1>Почему выбирают нас?</h1>
           <div class="recipeBlock">
             <div class="recipe">
-              <img src="#" alt="Картинка с кофем" />
+              <img src="/img/почемвыбир.png" alt="Картинка с кофем" />
               <h2>Мы предлагаем необычные рецепты</h2>
               <p>
                 Эспрессо и американо — неизменная классика кофе. Но, кроме того,
@@ -123,7 +123,8 @@
               </p>
             </div>
             <div class="recipe">
-              <img src="#" alt="Картинка с кофем" />
+              <img src="/img/почемвыбир.png" alt="Картинка с кофем" />
+
               <h2>Мы предлагаем необычные рецепты</h2>
               <p>
                 Эспрессо и американо — неизменная классика кофе. Но, кроме того,
@@ -132,7 +133,8 @@
               </p>
             </div>
             <div class="recipe">
-              <img src="#" alt="Картинка с кофем" />
+              <img src="/img/почемвыбир.png" alt="Картинка с кофем" />
+
               <h2>Мы предлагаем необычные рецепты</h2>
               <p>
                 Эспрессо и американо — неизменная классика кофе. Но, кроме того,
@@ -141,7 +143,7 @@
               </p>
             </div>
             <div class="recipe">
-              <img src="#" alt="Картинка с кофем" />
+              <img src="/img/почемвыбир.png" alt="Картинка с кофем" />
               <h2>Мы предлагаем необычные рецепты</h2>
               <p>
                 Эспрессо и американо — неизменная классика кофе. Но, кроме того,
@@ -150,7 +152,7 @@
               </p>
             </div>
             <div class="recipe">
-              <img src="#" alt="Картинка с кофем" />
+              <img src="/img/почемвыбир.png" alt="Картинка с кофем" />
               <h2>Мы предлагаем необычные рецепты</h2>
               <p>
                 Эспрессо и американо — неизменная классика кофе. Но, кроме того,
