gk.test закончил блок нам есть чем гордится

--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -166,26 +166,29 @@
           <h1>У нас работают только профессионалы</h1>
           <div class="workpeopleblock">
             <div class="rollerblock">
-              <img src="#" alt="стрелка в лево" />
-              <div class="workerportfolio">
-                <img src="#" alt="Фото работника" />
-                <p>Иванов Иван</p>
-                <p>
-                  Бариста – работник кафе, который варит кофе и готовит на его
-                  основе различные напитки и десерты. Эта профессия похожа на
-                  профессию бармена, но стихия бариста – не алкоголь, а
-                  ароматный, бодрящий кофе.
-                </p>
-              </div>
-              <img src="#" alt="стрелка в право" />
+              <a class="leftarrow" href="#"></a>
+                <div class="workerportfolio">
+                <div class="workerphoto">
+                  <img src="/img/WorckerPhoto.png" alt="Фото работника" />
+                </div> 
+                  <div class="workertext">
+                    <p class="workertextname">Иванов Иван</p>
+                    <p class="workertextfeedback">
+                      Бариста – работник кафе, который варит кофе и готовит на его
+                      основе различные напитки и десерты. Эта профессия похожа на
+                      профессию бармена, но стихия бариста – не алкоголь, а
+                      ароматный, бодрящий кофе. </p>
+                  </div>
+                </div>
+              <a class="rightarrow" href="#"></a>
             </div>
             <div class="zerno">
-              <img src="#" alt="" />
-              <img src="#" alt="" />
-              <img src="#" alt="" />
-              <img src="#" alt="" />
-              <img src="#" alt="" />
-              <img src="#" alt="" />
+              <a href="#" class="zernolink"></a>
+              <a href="#" class="zernolink"></a>
+              <a href="#" class="zernolink"></a>
+              <a href="#" class="zernolink"></a>
+              <a href="#" class="zernolink"></a>
+              <a href="#" class="zernolink"></a>
             </div>
           </div>
         </div>
