gk.test начал делать rewards

--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -197,19 +197,19 @@
           <h1>Нам есть чем гордиться</h1>
           <div class="rewards">
             <div class="reward">
-              <img src="#" alt="Картинка кофе" />
-              <p>Премия «Бариста года 2019»</p>
-              <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+              <img class="rewardimg" src="/img/бариста.png" alt="Картинка кофе" />
+              <p class="rewardbarista" >Премия «Бариста года 2019»</p>
+              <p class="rewardtext" >В рамках выставки Coffee Tea Cacao Russian Expo</p>
             </div>
             <div class="reward">
-              <img src="#" alt="Картинка кофе" />
-              <p>Премия «Бариста года 2019»</p>
-              <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+              <img class="rewardimg" src="/img/бариста.png" alt="Картинка кофе" />
+              <p class="rewardbarista" >Премия «Бариста года 2019»</p>
+              <p class="rewardtext" >В рамках выставки Coffee Tea Cacao Russian Expo</p>
             </div>
             <div class="reward">
-              <img src="#" alt="Картинка кофе" />
-              <p>Премия «Бариста года 2019»</p>
-              <p>В рамках выставки Coffee Tea Cacao Russian Expo</p>
+              <img class="rewardimg" src="/img/бариста.png" alt="Картинка кофе" />
+              <p class="rewardbarista" >Премия «Бариста года 2019»</p>
+              <p class="rewardtext" >В рамках выставки Coffee Tea Cacao Russian Expo</p>
             </div>
           </div>
         </div>
