--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -215,13 +215,18 @@
         </div>
         <div class="delivery">
           <!-- на фоне картинка зерен в турке-->
-          <h1>Действует доставка!</h1>
-          <p>
+          <div class="deliverycontain">
+          <h1 class="deliveryheader" >Действует доставка!</h1>
+          <p class="deliverytext">
             Доставляем кофе в зёрнах и десерты за 30 минут по Адмиралтейскому
-            району. Минимальная сумма заказа — 500 рублей.
+            району. <br> <br> Минимальная сумма заказа — 500 рублей.
           </p>
           <!-- тут будет кнопка -->
-          <button>Заказать</button>
+            <div class="buttoncontainer">
+              <a href="#"><p class="buttonfindme">Заказать</p></a>
+            </div>
+
+          </div>
         </div>
         <div class="maps">
           <div class="addres">
