--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -230,13 +230,22 @@
         </div>
         <div class="maps">
           <div class="addres">
-            <h1>Мы ждем вас!</h1>
-            <p>9:00 — 21:00</p>
-            <p>ул. Малая Морская, 9</p>
-            <p>ул. Конногвардейский бульвар, 13</p>
-          </div>
+            <h1 class="FontMerriweatherNormal400 ">Мы ждем вас!</h1>
+              <div class="addresCompositor">
+                <img src="/img/carbon_time.svg" alt="">
+                <p class="FontRalewayNormal400">9:00 — 21:00</p>
+              </div>
+              <div class="addresCompositor">
+                <img src="/img/akar-icons_location.svg" alt="">
+                <p class="FontRalewayNormal400">ул. Малая Морская, 9</p>
+              </div>
+              <div class="addresCompositor">
+                <img src="/img/akar-icons_location.svg" alt="">
+                <p class="FontRalewayNormal400">ул. Конногвардейский бульвар, 13</p>
+              </div>
+            </div>
           <div class="map">
-            <!-- тут будет карта, вставлю из яндекса -->
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeec9e0506e4d2b912d505611a4ab3bf274926a2dfe3265aaa8bee27ed2a8bf6e&amp;width=793&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
           </div>
         </div>
       </div>
