gk.test предварительно закончил без рефакторинга

--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -22,11 +22,11 @@
           <div class="logo">
             <img src="/img/логотип.svg" alt="Gourmet Coffee" />
           </div>
-          <div class="navbar">
-            <a href="#">Меню</a>
-            <a href="#">О нас</a>
-            <a href="#">Команда</a>
-            <a href="#">Доставка</a>
+          <div class="navbar ">
+            <a class="FontRalewayNormal400Black" href="#">Меню</a>
+            <a class="FontRalewayNormal400Black" href="#">О нас</a>
+            <a class="FontRalewayNormal400Black" href="#">Команда</a>
+            <a class="FontRalewayNormal400Black" href="#">Доставка</a>
           </div>
           <div class="flexspace"></div>
           <div class="socialblock">
@@ -230,18 +230,18 @@
         </div>
         <div class="maps">
           <div class="addres">
-            <h1 class="FontMerriweatherNormal400 ">Мы ждем вас!</h1>
+            <h1 class="FontMerriweatherNormal400Black">Мы ждем вас!</h1>
               <div class="addresCompositor">
                 <img src="/img/carbon_time.svg" alt="">
-                <p class="FontRalewayNormal400">9:00 — 21:00</p>
+                <p class="FontRalewayNormal400Black">9:00 — 21:00</p>
               </div>
               <div class="addresCompositor">
                 <img src="/img/akar-icons_location.svg" alt="">
-                <p class="FontRalewayNormal400">ул. Малая Морская, 9</p>
+                <p class="FontRalewayNormal400Black">ул. Малая Морская, 9</p>
               </div>
               <div class="addresCompositor">
                 <img src="/img/akar-icons_location.svg" alt="">
-                <p class="FontRalewayNormal400">ул. Конногвардейский бульвар, 13</p>
+                <p class="FontRalewayNormal400Black">ул. Конногвардейский бульвар, 13</p>
               </div>
             </div>
           <div class="map">
@@ -252,31 +252,35 @@
 
       <footer>
         <div class="footerwrapper">
-          <div class="logo"></div>
-          <div class="navbar">
-            <h1>Навигация</h1>
-            <a href="#">Меню</a>
-            <a href="#">О нас</a>
-            <a href="#">Команда</a>
-            <a href="#">Доставка</a>
+          <div class="logo">
+              <img src="/img/whitelogo.svg" alt="Gourmet Coffee" />
+          </div>
+          <div class="menuwrapper">
+          <div class="navbar footernavbar footernavbarfixgap">
+            <h1 class="FontRalewayNormal600White" >Навигация</h1>
+            <a class="FontRalewayNormal400White" href="#">Меню</a>
+            <a class="FontRalewayNormal400White" href="#">О нас</a>
+            <a class="FontRalewayNormal400White" href="#">Команда</a>
+            <a class="FontRalewayNormal400White" href="#">Доставка</a>
           </div>
           <div class="menufuter">
-            <h1>Меню</h1>
-            <a href="#">Кофе</a>
-            <a href="#">Чай</a>
-            <a href="#">Лимонады</a>
-            <a href="#">Десерты</a>
-            <a href="#">Кофе в зёрнах</a>
+            <h1 class="FontRalewayNormal600White">Меню</h1>
+            <a class="FontRalewayNormal400White" href="#">Чай</a>
+            <a class="FontRalewayNormal400White" href="#">Кофе</a>
+            <a class="FontRalewayNormal400White" href="#">Лимонады</a>
+            <a class="FontRalewayNormal400White" href="#">Десерты</a>
+            <a class="FontRalewayNormal400White" href="#">Кофе в зёрнах</a>
+          </div>
           </div>
           <div class="contects">
-            <p>+7 (XXX) XXX - XX - XX</p>
-            <p>gourmetcoffee@gmail.com</p>
+            <p class="FontRalewayNormal600White">+7 (XXX) XXX - XX - XX</p>
+            <p class="FontRalewayNormal600White">gourmetcoffee@gmail.com</p>
             <div class="minisocialblock">
               <a href="#"><img src="/img/instwhite.svg" alt="Instagramm" /></a>
               <a href="#"><img src="/img/vkwhite.svg" alt="VK" /></a>
               <a href="#"><img src="/img/twitterwhite.svg" alt="Twitter" /></a>
             </div>
-            <a href="#">Заказать доставку</a>
+              <a class="footerbutton" href="#"><p class="FontRalewayNormal400Black footerbuttonposition">Заказать доставку</p></a>
           </div>
         </div>
       </footer>
