--- a/gk.test/www/index.html
+++ b/gk.test/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1600" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="/img/ZernoActive.svg">
@@ -40,45 +40,45 @@
         <!-- Тут будет ключевой образ, бариста который льет горячий кофе мимо кружки и обливает руку клиенту -->
         <div class="heroheader">
           <div class="herocontent">
-            <h1>Крафтовая кофейня<br />«gourmet coffee»</h1>
-            <p>
+            <h1 class="FontMerriweatherNormal400Black48px h1herocontentposition">Крафтовая кофейня<br />«gourmet coffee»</h1>
+            <p class="FontRalewayNormal400Black pherocontentposition">
               Изысканным кофе по традиционным рецептам и его необычным<br />способом
               подачи наши гости наслаждаются уже 5 лет.
             </p>
             <div class="buttoncontainer">
-              <a href="#"><p class="buttonfindme">Найти нас</p></a>
+              <a href="#"><p class="buttonfindme FontRalewayNormal400Black">Найти нас</p></a>
             </div>
           </div>
         </div>
         <div class="menu">
-          <h1>Меню</h1>
+          <h1 class="FontMerriweatherNormal400Black menuh1position">Меню</h1>
           <div class="category">
-            <a href="#">Кофе</a>
-            <a href="#">Чай</a>
-            <a href="#">Лимонады</a>
-            <a href="#">Десерты</a>
-            <a href="#">Кофе в зернах</a>
+            <a class="FontRalewayNormal400Black colorLink_a" href="#">Кофе</a>
+            <a class="FontRalewayNormal400Black colorLink_a" href="#">Чай</a>
+            <a class="FontRalewayNormal400Black colorLink_a" href="#">Лимонады</a>
+            <a class="FontRalewayNormal400Black colorLink_a" href="#">Десерты</a>
+            <a class="FontRalewayNormal400Black colorLink_a" href="#">Кофе в зернах</a>
           </div>
           <div class="product">
             <div class="proditems">
               <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
-              <p class="prodname">Кофейный гоголь-моголь</p>
-              <p class="prodcost">190 руб</p>
+              <p class="FontRalewayNormal600Black">Кофейный гоголь-моголь</p>
+              <p class="FontRalewayNormal400Black">190 руб</p>
             </div>
             <div class="proditems">
               <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
-              <p class="prodname">Эспрессо-тоник</p>
-              <p class="prodcost">190 руб</p>
+              <p class="FontRalewayNormal600Black">Эспрессо-тоник</p>
+              <p class="FontRalewayNormal400Black">190 руб</p>
             </div>
             <div class="proditems">
               <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
-              <p class="prodname">Тим Там Слэм</p>
-              <p class="prodcost">190 руб</p>
+              <p class="FontRalewayNormal600Black">Тим Там Слэм</p>
+              <p class="FontRalewayNormal400Black">190 руб</p>
             </div>
             <div class="proditems">
               <img src="/img/menucoc1t.png" alt="красивая кружка с кофем" />
-              <p class="prodname">Аффогато</p>
-              <p class="prodcost">190 руб</p>
+              <p class="FontRalewayNormal600Black">Аффогато</p>
+              <p class="FontRalewayNormal400Black">190 руб</p>
             </div>
           </div>
           <div class="arowbig">
@@ -91,10 +91,10 @@
           </div>
         </div>
         <div class="info">
-          <h1>Познакомимся поближе</h1>
+          <h1 class="FontMerriweatherNormal400Black infoh1center">Познакомимся поближе</h1>
           <div class="infocontent">
-            <h2>Каким должен быть вкусный кофе?</h2>
-            <p>
+            <h2 class="FontRalewayNormal600Black infocontenth2position">Каким должен быть вкусный кофе?</h2>
+            <p class="FontRalewayNormal400Black">
               Крафтовым кофе называют сорта, которые создают по специальным
               рецептам в незначительных количествах. Это зерна с особенным
               вкусом, рецепт обжарки которых мастера не раскрывают. <br> <br>Крафтовый
