--- a/arrays/www/index.html
+++ b/arrays/www/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
-<script src="/script.js"></script>
+  </head>
+
+  <body>
+    <div class="output" style="min-height: 150px">
+      <ul>
+        <li>0</li>
+      </ul>
+
+      <p>Total: $0.00</p>
+    </div>
+  </body>
+  <script src="/script.js"></script>
 </html>
