--- a/js If/index.html
+++ b/js If/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <span>Выберите тему: </span>
+    <select name="select">
+      <option value="Белая" selected>Белая</option>
+      <option value="Черная">Черная</option>
+      <option value="Лиловая">Лиловая</option>
+      <option value="Желтая">Желтая</option>
+      <option value="Психоделическая">Психоделическая</option>
+    </select>
+    <h1 class="output">Тестим switch в JS</h1>
+    <div class="output1"></div>
+    <div class="while">
+      <p class="admitted"></p>
+      <p class="refused"></p>
+    </div>
+  </body>
   <script src="/script.js"></script>
 </html>
